Collect what a loop was filling, and let an enum declare its own lookup
Two passes over one shape. A method that allocated a collection, walked a source,
branched inside the body and wrote into the allocation - then sometimes froze it -
now says that as one uninterrupted chain: 227 sites, and 124 declared types that
were handing a JDK collection out of a public type moved onto the Concurrent
surface with them.

Where a collected value lands is decided by where it lives. The pipeline and the
user-facing runtime collect through Concurrent, taking the unmodifiable collector
wherever the value never changes after it is built, since those carry a no-op
read/write lock and are the cheapest member of the family as well as the most
honest. Tooling collects through java.util.stream.Collectors and keeps every
resulting type a JDK type - not a preference but a constraint, its build declaring
no dependency on the collections library at all. A throwaway local that never
leaves its method keeps whatever it had.

The enums lose the machinery they were hand-rolling. Forty-one take @EnumLookup,
@KeyField, @RequiredArgsConstructor and @Getter between them, which deletes five
public CACHED_VALUES caches, the BY_NAME, BY_ID, BY_MASK and BY_JSON_NAME indexes,
and every assign-only constructor and return-this accessor they carried. Forty
accessor javadocs move onto the field they read, losing their @return and keeping
the noun fragment. A field named token regenerates ofToken under its own name, so
eight of these are a body deletion no caller notices. CornerPhase.CACHED_VALUES is
simply gone: nothing read it, here or anywhere.

Two maps stay loops, because their iteration order is a rendered value:

#### A collected variant map draws a different block

BlockIndexBuilder.resolveBlockStateModel picks a block's model with
values().iterator().next(), so the hash order these two producers settle on decides
what is drawn, and a collector that fills its table any other way changes it in
silence